<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:background="@color/white">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_centerVertical="true"
                android:text="@string/settingsFrag_top_text"
                android:textSize="28sp"
                android:textColor="@color/color_main"
                android:fontFamily="@font/nanum_bold" />

        </RelativeLayout>

        <View
            android:id="@+id/settingsFrag_divide_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_main" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/settingsFrag_theme_tV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:text="@string/settingsTheme_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/color_main"
                android:fontFamily="@font/nanum_regular" />

            <LinearLayout
                android:id="@+id/settingsFrag_theme_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/settingsFrag_theme_tV"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settingsFrag_lightTheme_tV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lightTheme_text"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:fontFamily="@font/nanum_regular"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settingsFrag_theme_sC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:switchMinWidth="72dp"
                    app:thumbTint="@color/color_main"
                    app:trackTint="@color/LightGray"/>

                <TextView
                    android:id="@+id/settingsFrag_darkTheme_tV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/darkTheme_text"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/nanum_regular"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/settingsFrag_logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/settingsFrag_theme_container"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:text="@string/logout_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/color_main"
                android:fontFamily="@font/nanum_regular"
                android:background="@drawable/rectangle_login_btn"
                android:focusable="true"
                android:clickable="true" />


        </RelativeLayout>



    </LinearLayout>


</FrameLayout>