<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Auth.LoginHomeActivity">


    <RelativeLayout
        android:id="@+id/login_rL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_logo_iV"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/login_logo_iV"
            android:layout_centerVertical="true"
            android:text="i-boss Chat 로그인"
            android:fontFamily="@font/vitro_pride"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/color_main" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/naver_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/social_naver"
        android:text="@string/naver_login_text"
        android:background="@drawable/rectangle_login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_rL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kakao_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/social_kakao"
        android:text="@string/kakao_login_text"
        android:background="@drawable/rectangle_login_btn"
        app:layout_constraintTop_toBottomOf="@id/naver_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/social_facebook"
        android:text="@string/facebook_login_text"
        android:background="@drawable/rectangle_login_btn"
        app:layout_constraintTop_toBottomOf="@id/kakao_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/facebook_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/email_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/login_email"
        android:text="@string/email_login_text"
        android:background="@drawable/rectangle_login_btn"
        app:layout_constraintTop_toBottomOf="@id/google_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>